Fixed: background color was stucked at screen height

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -11,6 +11,7 @@
 .container
     margin-left 20%
     background #fff
+    overflow auto
 
 i.tag-icon
     background url('../images/tag.png') no-repeat
