--- a/client/public/stylesheets/app.css
+++ b/client/public/stylesheets/app.css
@@ -884,6 +884,7 @@ textarea:active {
 .container {
   margin-left: 20%;
   background: #fff;
+  overflow: auto;
 }
 i.tag-icon {
   background: url("../images/tag.png") no-repeat;
